--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -45,7 +45,7 @@ ul, ol /*Padrão Bootstrap*/
 nav,
 .nav-tabs > li > a {
   font-weight: bolder;
-  color: #238eff;
+  color: #0d61ba;
   text-decoration-line: none;
   position: relative;
   display: block;
@@ -93,13 +93,14 @@ li.active a:before{
 }
 
 .siteGuide{
-  background-color: #d6eaff;
-  color: #238eff;
+  background-color: #ddeeff;
+  color: #0d61ba;
   font-weight: 900;
   text-decoration-line: none;
   font-size: 12px;
   margin-top: 54px;
-  margin-left: 3%;
+  margin-left: 40px;
+  margin-right: -31px;
 }
 
 #siteLogo img{
@@ -108,5 +109,8 @@ li.active a:before{
   height: 30px;
 }
 #siteLogo p{
-  font-size: 25px;
+  margin-top: 35px;
+  margin-right: -20px;
+  font-family: 'Varela Round', sans-serif;
+  font-size: 30px;
 }
