More navbar work

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,7 +5,7 @@
 <div class="bodyNav">
 <ul class="nav nav-tabs">
   <li id = "siteLogo">
-    <p>  <img src="./assets/redditLogo.png">   Reddit</p>
+    <p>  <img src="./assets/redditIcon.png">Reddit</p>
   </li>
 
   <li class="active siteGuide">
@@ -34,6 +34,27 @@
   </li>
   <li class="siteGuide">
     <a href="#tab4" data-toggle="tab">Show Images</a>
+  </li>
+  <li class="siteTopRight">
+    <a href="#tab4" data-toggle="tab">UserName</a>
+  </li>
+  <li class="siteTopRight">
+    <a href="#tab4" data-toggle="tab"><img src="./assets/redditLogo.png"></a>
+  </li>
+  <li class="siteTopRight">
+    <a href="#tab4" data-toggle="tab">(postKarma - CommentKarma)</a>
+  </li>
+  <li class="siteTopRight">
+    <a href="#tab4" data-toggle="tab">|<img src="./assets/mail.png"> |</a>
+  </li>
+  <li class="siteTopRight">
+    <a href="#tab4" data-toggle="tab"><img src="./assets/message.png">|</a>
+  </li>
+  <li class="siteTopRight">
+    <a href="#tab4" data-toggle="tab"><img src="./assets/settings.png">|</a>
+  </li>
+  <li class="siteTopRight">
+    <a href="#tab4" data-toggle="tab">logout</a>
   </li>
 </ul>
 <div class="tab-content">
