--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -6,7 +6,7 @@
 
 }
 
-p  /*Personalizado Bootstrap*/
+p
 {
   font-size: 15px;
   font-style: normal;
@@ -14,14 +14,14 @@ p  /*Personalizado Bootstrap*/
   color: #333333;
   line-height: 1.42857;
 }
-ul, ol /*Padrão Bootstrap*/
+ul, ol
 {
   margin-top: -10px;
   margin-bottom: 10px;
   margin-left: -8px;
   margin-right: -8px;
 }
-.nav /*Padrão Bootstrap*/
+.nav
 {
   padding-left: 0px;
   margin-bottom: 0px;
@@ -34,7 +34,7 @@ ul, ol /*Padrão Bootstrap*/
 .nav-tabs {
   background-color: #bfdeff;
 
-  height: 70px;
+  height: 50px;
   color: white;
 }
 .nav-tabs > li
@@ -98,7 +98,7 @@ li.active a:before{
   font-weight: 900;
   text-decoration-line: none;
   font-size: 12px;
-  margin-top: 54px;
+  margin-top: 32px;
   margin-left: 40px;
   margin-right: -31px;
 }
@@ -109,8 +109,23 @@ li.active a:before{
   height: 30px;
 }
 #siteLogo p{
-  margin-top: 35px;
+  margin-top: 17px;
   margin-right: -20px;
   font-family: 'Varela Round', sans-serif;
   font-size: 30px;
 }
+.siteTopRight img {
+  height: 15px;
+  width: 15px;
+}
+ .siteTopRight {
+   height: 18px;
+   margin-top: 2px;
+   margin-bottom: 2px;
+   font-size: 11px;
+   background-color: #ddeeff;
+   color: #0d61ba;
+   text-decoration-line: none;
+   margin-left: -50px;
+   margin-right: 45px;
+ }
