Add sidebar and some styling

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,10 +2,11 @@
   <link href="https://fonts.googleapis.com/css?family=Roboto:900&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Varela+Round&display=swap" rel="stylesheet">
 </header>
+
 <div class="bodyNav">
 <ul class="nav nav-tabs">
   <li id = "siteLogo">
-    <p>  <img src="./assets/redditIcon.png">Reddit</p>
+    <p class="pClass"> <a href="#main-nav" class="open-menu"><img src="./assets/redditIcon.png"></a>Reddit</p>
   </li>
 
   <li class="active siteGuide">
@@ -35,50 +36,89 @@
   <li class="siteGuide">
     <a href="#tab4" data-toggle="tab">Show Images</a>
   </li>
-  <li class="siteTopRight">
-    <a href="#tab4" data-toggle="tab">UserName</a>
+  <li class="siteTopRight1">
+    <a href="#tab4" data-toggle="tab">  UserName</a>
   </li>
-  <li class="siteTopRight">
+  <li class="siteTopRight2">
     <a href="#tab4" data-toggle="tab"><img src="./assets/redditLogo.png"></a>
   </li>
-  <li class="siteTopRight">
+  <li class="siteTopRight3">
     <a href="#tab4" data-toggle="tab">(postKarma - CommentKarma)</a>
   </li>
-  <li class="siteTopRight">
-    <a href="#tab4" data-toggle="tab">|<img src="./assets/mail.png"> |</a>
+  <li class="siteTopRight4">
+    <a href="#tab4" data-toggle="tab"> | <img src="./assets/mail.png"> | </a>
   </li>
-  <li class="siteTopRight">
-    <a href="#tab4" data-toggle="tab"><img src="./assets/message.png">|</a>
+  <li class="siteTopRight5">
+    <a href="#tab4" data-toggle="tab"><img src="./assets/message.png"> |</a>
   </li>
-  <li class="siteTopRight">
-    <a href="#tab4" data-toggle="tab"><img src="./assets/settings.png">|</a>
+  <li class="siteTopRight6">
+    <a href="#tab4" data-toggle="tab"><img src="./assets/settings.png"> |</a>
   </li>
-  <li class="siteTopRight">
+  <li class="siteTopRight7">
     <a href="#tab4" data-toggle="tab">logout</a>
   </li>
+
 </ul>
-<div class="tab-content">
-  <div class="tab-pane active" id="tab1">
-    <p>Tab 1 content goes here...</p>
-  </div>
-  <div class="tab-pane" id="tab2">
-    <p>Tab 2 content goes here...</p>
-  </div>
-  <div class="tab-pane" id="tab3">
-    <p>Tab 3 content goes here...</p>
-  </div>
-  <div class="tab-pane" id="tab4">
-    <p>Tab 4 content goes here...</p>
-  </div>
+
 
 </div>
-<!-- Bootstrap core JavaScript
-  ================================================== -->
-<!-- Placed at the end of the document so the pages load faster -->
+<input type="checkbox" id="menu" class="menu-cek">
+<label for="menu" class="menu-btn">
+  <span class="top"></span>
+  <span class="middle"></span>
+  <span class="bottom"></span>
+</label>
+<section class="container">
+  <div class="tab-content">
+    <div class="tab-pane active" id="tab1">
+      <p class="pClass">Tab 1 content goes here...</p>
+    </div>
+    <div class="tab-pane" id="tab2">
+      <p class="pClass">Tab 2 content goes here...</p>
+    </div>
+    <div class="tab-pane" id="tab3">
+      <p class="pClass">Tab 3 content goes here...</p>
+    </div>
+    <div class="tab-pane" id="tab4">
+      <p class="pClass">Tab 4 content goes here...</p>
+    </div>
+    <div class="tab-pane" id="tab5">
+      <p class="pClass">Tab 5 content goes here...</p>
+    </div>
+    <div class="tab-pane" id="tab6">
+      <p class="pClass">Tab 6 content goes here...</p>
+    </div>
+    <div class="tab-pane" id="tab7">
+      <p class="pClass">Tab 7 content goes here...</p>
+    </div>
+    <div class="tab-pane" id="tab8">
+      <p class="pClass">Tab 8 content goes here...</p>
+    </div>
+    <div class="tab-pane" id="tab9">
+      <p class="pClass">Tab 9 content goes here...</p>
+    </div>
 
-
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
-<script src="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
-</div>
-
+  </div>
+</section>
+<aside class="sidebar">
+  <ul>
+    <li><a href="#">item</a></li>
+    <li><a href="#">item</a></li>
+    <li><a href="#">item</a></li>
+    <li><a href="#">item</a></li>
+    <li><a href="#">item</a></li>
+    <li><a href="#">item</a></li>
+    <li><a href="#">item</a></li>
+    <li><a href="#">item</a></li>
+    <li><a href="#">item</a></li>
+    <li><a href="#">item</a></li>
+    <li><a href="#">item</a></li>
+    <li><a href="#">item</a></li>
+    <li><a href="#">item</a></li>
+    <li><a href="#">item</a></li>
+    <li><a href="#">item</a></li>
+    <li><a href="#">item</a></li>
+    <li><a href="#">item</a></li>
+  </ul>
+</aside>
 
