fix scrolling issue

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,35 +6,35 @@
 <div class="bodyNav">
 <ul class="nav nav-tabs">
   <li id = "siteLogo">
-    <p class="pClass"> <a href="#main-nav" class="open-menu"><img src="./assets/redditIcon.png"></a>Reddit</p>
+    <p class="pClass"> <a href="#main-nav" class="open-menu"><img src="./assets/redditIcon.png"></a>reddit</p>
   </li>
 
   <li class="active siteGuide">
-    <a href="#tab1" data-toggle="tab">Best</a>
+    <a href="#tab1" data-toggle="tab">best</a>
   </li>
   <li class="siteGuide">
-    <a href="#tab2" data-toggle="tab">Hot</a>
+    <a href="#tab2" data-toggle="tab">hot</a>
   </li>
   <li class="siteGuide">
-    <a href="#tab3" data-toggle="tab">New</a>
+    <a href="#tab3" data-toggle="tab">new</a>
   </li>
   <li class="siteGuide">
-    <a href="#tab4" data-toggle="tab">Rising</a>
+    <a href="#tab4" data-toggle="tab">rising</a>
   </li>
   <li class="siteGuide">
-    <a href="#tab4" data-toggle="tab">Controversial</a>
+    <a href="#tab4" data-toggle="tab">controversial</a>
   </li>
   <li class="siteGuide">
-    <a href="#tab4" data-toggle="tab">Top</a>
+    <a href="#tab4" data-toggle="tab">top</a>
   </li>
   <li class="siteGuide">
-    <a href="#tab4" data-toggle="tab">Gilded</a>
+    <a href="#tab4" data-toggle="tab">gilded</a>
   </li>
   <li class="siteGuide">
-    <a href="#tab4" data-toggle="tab">Wiki</a>
+    <a href="#tab4" data-toggle="tab">wiki</a>
   </li>
   <li class="siteGuide">
-    <a href="#tab4" data-toggle="tab">Show Images</a>
+    <a href="#tab4" data-toggle="tab">show images</a>
   </li>
   <li class="siteTopRight1">
     <a href="#tab4" data-toggle="tab">  UserName</a>
