add objects for posts

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,7 +6,7 @@
 <div class="bodyNav">
 <ul class="nav nav-tabs">
   <li id = "siteLogo">
-    <p class="pClass"> <a href="#main-nav" class="open-menu"><img src="./assets/redditIcon.png"></a>reddit</p>
+    <p class="pClass"> <a href="#main-nav" class="open-menu"><img src="./assets/redditIcon.png"></a>{{title}}</p>
   </li>
 
   <li class="active siteGuide">
