Add best page sorting

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,124 +1,2 @@
-<header>
-  <link href="https://fonts.googleapis.com/css?family=Roboto:900&display=swap" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css?family=Varela+Round&display=swap" rel="stylesheet">
-</header>
 
-<div class="bodyNav">
-<ul class="nav nav-tabs">
-  <li id = "siteLogo">
-    <p class="pClass"> <a href="#main-nav" class="open-menu"><img src="./assets/redditIcon.png"></a>{{title}}</p>
-  </li>
-
-  <li class="active siteGuide">
-    <a href="#tab1" data-toggle="tab">best</a>
-  </li>
-  <li class="siteGuide">
-    <a href="#tab2" data-toggle="tab">hot</a>
-  </li>
-  <li class="siteGuide">
-    <a href="#tab3" data-toggle="tab">new</a>
-  </li>
-  <li class="siteGuide">
-    <a href="#tab4" data-toggle="tab">rising</a>
-  </li>
-  <li class="siteGuide">
-    <a href="#tab4" data-toggle="tab">controversial</a>
-  </li>
-  <li class="siteGuide">
-    <a href="#tab4" data-toggle="tab">top</a>
-  </li>
-  <li class="siteGuide">
-    <a href="#tab4" data-toggle="tab">gilded</a>
-  </li>
-  <li class="siteGuide">
-    <a href="#tab4" data-toggle="tab">wiki</a>
-  </li>
-  <li class="siteGuide">
-    <a href="#tab4" data-toggle="tab">show images</a>
-  </li>
-  <li class="siteTopRight1">
-    <a href="#tab4" data-toggle="tab">  UserName</a>
-  </li>
-  <li class="siteTopRight2">
-    <a href="#tab4" data-toggle="tab"><img src="./assets/redditLogo.png"></a>
-  </li>
-  <li class="siteTopRight3">
-    <a href="#tab4" data-toggle="tab">(postKarma - CommentKarma)</a>
-  </li>
-  <li class="siteTopRight4">
-    <a href="#tab4" data-toggle="tab"> | <img src="./assets/mail.png"> | </a>
-  </li>
-  <li class="siteTopRight5">
-    <a href="#tab4" data-toggle="tab"><img src="./assets/message.png"> |</a>
-  </li>
-  <li class="siteTopRight6">
-    <a href="#tab4" data-toggle="tab"><img src="./assets/settings.png"> |</a>
-  </li>
-  <li class="siteTopRight7">
-    <a href="#tab4" data-toggle="tab">logout</a>
-  </li>
-
-</ul>
-
-
-</div>
-<input type="checkbox" id="menu" class="menu-cek">
-<label for="menu" class="menu-btn">
-  <span class="top"></span>
-  <span class="middle"></span>
-  <span class="bottom"></span>
-</label>
-<section class="container">
-  <div class="tab-content">
-    <div class="tab-pane active" id="tab1">
-      <p class="pClass">Tab 1 content goes here...</p>
-    </div>
-    <div class="tab-pane" id="tab2">
-      <p class="pClass">Tab 2 content goes here...</p>
-    </div>
-    <div class="tab-pane" id="tab3">
-      <p class="pClass">Tab 3 content goes here...</p>
-    </div>
-    <div class="tab-pane" id="tab4">
-      <p class="pClass">Tab 4 content goes here...</p>
-    </div>
-    <div class="tab-pane" id="tab5">
-      <p class="pClass">Tab 5 content goes here...</p>
-    </div>
-    <div class="tab-pane" id="tab6">
-      <p class="pClass">Tab 6 content goes here...</p>
-    </div>
-    <div class="tab-pane" id="tab7">
-      <p class="pClass">Tab 7 content goes here...</p>
-    </div>
-    <div class="tab-pane" id="tab8">
-      <p class="pClass">Tab 8 content goes here...</p>
-    </div>
-    <div class="tab-pane" id="tab9">
-      <p class="pClass">Tab 9 content goes here...</p>
-    </div>
-
-  </div>
-</section>
-<aside class="sidebar">
-  <ul>
-    <li><a href="#">item</a></li>
-    <li><a href="#">item</a></li>
-    <li><a href="#">item</a></li>
-    <li><a href="#">item</a></li>
-    <li><a href="#">item</a></li>
-    <li><a href="#">item</a></li>
-    <li><a href="#">item</a></li>
-    <li><a href="#">item</a></li>
-    <li><a href="#">item</a></li>
-    <li><a href="#">item</a></li>
-    <li><a href="#">item</a></li>
-    <li><a href="#">item</a></li>
-    <li><a href="#">item</a></li>
-    <li><a href="#">item</a></li>
-    <li><a href="#">item</a></li>
-    <li><a href="#">item</a></li>
-    <li><a href="#">item</a></li>
-  </ul>
-</aside>
-
+<app-show-best>Loading Reddit</app-show-best>
