--- a/src/app/show-best/show-best.component.html
+++ b/src/app/show-best/show-best.component.html
@@ -64,10 +64,11 @@
 <section class="container">
   <div class="tab-content">
     <div *ngIf="showBestCheck">
+      <h4>Best Reddit Posts</h4>
     <div class="tab-pane active" id="tab1" *ngFor="let post of masterPostList">
-      <p><span class="postVotes">{{post.upvotes}}</span><span class="postImage"> <img src="{{post.thumbnail}}"> </span><span class="postTitle">{{post.title}}</span>><br> <span class="postInfo">Uploaded {{post.time}} hours ago by: {{post.username}} </span> <br> <span class="postSource"> {{post.commentNum}} comments <a href="{{post.link}}">source</a></span></p>
+      <p><span class="postVotes">{{post.upvotes}}</span><span class="postImage"> <img src="{{post.thumbnail}}"> </span><span class="postTitle">{{post.title}}</span><br> <span class="postInfo">Uploaded {{post.time}} hours ago by: {{post.username}} </span> <br> <span class="postSource"> {{post.commentNum}} comments <a href="{{post.link}}">source</a></span></p>
       <br>
-      <p>________________________________________________________________________________</p>
+      <br>
       <br>
     </div>
     </div>
@@ -80,33 +81,53 @@
 <!--    // public link: string-->
 <!--    // public thumbnail: string-->
     <div *ngIf="showHotCheck">
-    <div class="tab-pane" id="tab2">
-      <p class="pClass">Tab 2 content goes here...</p>
-    </div>
+      <h4>Hottest Reddit Posts</h4>
+      <div class="tab-pane active" id="tab1" *ngFor="let post of masterPostList">
+        <p><span class="postVotes">{{post.upvotes}}</span><span class="postImage"> <img src="{{post.thumbnail}}"> </span><span class="postTitle">{{post.title}}</span><br> <span class="postInfo">Uploaded {{post.time}} hours ago by: {{post.username}} </span> <br> <span class="postSource"> {{post.commentNum}} comments <a href="{{post.link}}">source</a></span></p>
+        <br>
+        <br>
+        <br>
+      </div>
     </div>
 
     <div *ngIf="showNewCheck">
-    <div class="tab-pane" id="tab3">
-      <p class="pClass">Tab 3 content goes here...</p>
-    </div>
+      <h4>Newest Reddit Posts</h4>
+      <div class="tab-pane active" id="tab1" *ngFor="let post of masterPostList">
+        <p><span class="postVotes">{{post.upvotes}}</span><span class="postImage"> <img src="{{post.thumbnail}}"> </span><span class="postTitle">{{post.title}}</span><br> <span class="postInfo">Uploaded {{post.time}} hours ago by: {{post.username}} </span> <br> <span class="postSource"> {{post.commentNum}} comments <a href="{{post.link}}">source</a></span></p>
+        <br>
+        <br>
+        <br>
+      </div>
     </div>
 
     <div *ngIf="showRisingCheck">
-    <div class="tab-pane" id="tab4">
-      <p class="pClass">Tab 4 content goes here...</p>
-    </div>
+      <h4>Top Rising Posts</h4>
+      <div class="tab-pane active" id="tab1" *ngFor="let post of masterPostList">
+        <p><span class="postVotes">{{post.upvotes}}</span><span class="postImage"> <img src="{{post.thumbnail}}"> </span><span class="postTitle">{{post.title}}</span><br> <span class="postInfo">Uploaded {{post.time}} hours ago by: {{post.username}} </span> <br> <span class="postSource"> {{post.commentNum}} comments <a href="{{post.link}}">source</a></span></p>
+        <br>
+        <br>
+        <br>
+      </div>
     </div>
 
     <div *ngIf="showControversialCheck">
-    <div class="tab-pane" id="tab5">
-      <p class="pClass">Tab 5 content goes here...</p>
-    </div>
+      <h4>Top Controversial Posts</h4>
+      <div class="tab-pane active" id="tab1" *ngFor="let post of masterPostList">
+        <p><span class="postVotes">{{post.upvotes}}</span><span class="postImage"> <img src="{{post.thumbnail}}"> </span><span class="postTitle">{{post.title}}</span><br> <span class="postInfo">Uploaded {{post.time}} hours ago by: {{post.username}} </span> <br> <span class="postSource"> {{post.commentNum}} comments <a href="{{post.link}}">source</a></span></p>
+        <br>
+        <br>
+        <br>
+      </div>
     </div>
 
     <div *ngIf="showTopCheck">
-    <div class="tab-pane" id="tab6">
-      <p class="pClass">Tab 6 content goes here...</p>
-    </div>
+      <h4>Top Reddit Posts</h4>
+      <div class="tab-pane active" id="tab1" *ngFor="let post of masterPostList">
+        <p><span class="postVotes">{{post.upvotes}}</span><span class="postImage"> <img src="{{post.thumbnail}}"> </span><span class="postTitle">{{post.title}}</span><br> <span class="postInfo">Uploaded {{post.time}} hours ago by: {{post.username}} </span> <br> <span class="postSource"> {{post.commentNum}} comments <a href="{{post.link}}">source</a></span></p>
+        <br>
+        <br>
+        <br>
+      </div>
     </div>
   </div>
 </section>
