--- a/src/app/show-best/show-best.component.html
+++ b/src/app/show-best/show-best.component.html
@@ -68,7 +68,8 @@
       <div class="tab-pane active" id="tab1" *ngFor="let post of masterPostList">
         <p><span class="up"><img src="./assets/upArrow.png"></span><span class="postVotes">{{post.upvotes}}</span><span
           class="down"><img src="./assets/downArrow.png"></span><span class="postImage"> <img src="{{post.thumbnail}}"> </span><span
-          class="postTitle">{{post.title}}</span><br> <span class="postInfo">Uploaded {{post.time}}
+          class="postTitle"><a href="{{post.link}}">{{post.title}}</a></span><br> <span
+          class="postInfo">Uploaded {{post.time}}
           hours ago by: {{post.username}} </span> <br> <span class="postSource"> {{post.commentNum}} comments <a
           href="{{post.link}}">source</a></span></p>
         <br>
@@ -89,7 +90,8 @@
       <div class="tab-pane active" id="tab1" *ngFor="let post of masterPostList">
         <p><span class="up"><img src="./assets/upArrow.png"></span><span class="postVotes">{{post.upvotes}}</span><span
           class="down"><img src="./assets/downArrow.png"></span><span class="postImage"> <img src="{{post.thumbnail}}"> </span><span
-          class="postTitle">{{post.title}}</span><br> <span class="postInfo">Uploaded {{post.time}}
+          class="postTitle"><a href="{{post.link}}">{{post.title}}</a></span><br> <span
+          class="postInfo">Uploaded {{post.time}}
           hours ago by: {{post.username}} </span> <br> <span class="postSource"> {{post.commentNum}} comments <a
           href="{{post.link}}">source</a></span></p>
         <br>
@@ -103,7 +105,8 @@
       <div class="tab-pane active" id="tab1" *ngFor="let post of masterPostList">
         <p><span class="up"><img src="./assets/upArrow.png"></span><span class="postVotes">{{post.upvotes}}</span><span
           class="down"><img src="./assets/downArrow.png"></span><span class="postImage"> <img src="{{post.thumbnail}}"> </span><span
-          class="postTitle">{{post.title}}</span><br> <span class="postInfo">Uploaded {{post.time}}
+          class="postTitle"><a href="{{post.link}}">{{post.title}}</a></span><br> <span
+          class="postInfo">Uploaded {{post.time}}
           hours ago by: {{post.username}} </span> <br> <span class="postSource"> {{post.commentNum}} comments <a
           href="{{post.link}}">source</a></span></p>
         <br>
@@ -117,7 +120,8 @@
       <div class="tab-pane active" id="tab1" *ngFor="let post of masterPostList">
         <p><span class="up"><img src="./assets/upArrow.png"></span><span class="postVotes">{{post.upvotes}}</span><span
           class="down"><img src="./assets/downArrow.png"></span><span class="postImage"> <img src="{{post.thumbnail}}"> </span><span
-          class="postTitle">{{post.title}}</span><br> <span class="postInfo">Uploaded {{post.time}}
+          class="postTitle"><a href="{{post.link}}">{{post.title}}</a></span><br> <span
+          class="postInfo">Uploaded {{post.time}}
           hours ago by: {{post.username}} </span> <br> <span class="postSource"> {{post.commentNum}} comments <a
           href="{{post.link}}">source</a></span></p>
         <br>
@@ -131,7 +135,8 @@
       <div class="tab-pane active" id="tab1" *ngFor="let post of masterPostList">
         <p><span class="up"><img src="./assets/upArrow.png"></span><span class="postVotes">{{post.upvotes}}</span><span
           class="down"><img src="./assets/downArrow.png"></span><span class="postImage"> <img src="{{post.thumbnail}}"> </span><span
-          class="postTitle">{{post.title}}</span><br> <span class="postInfo">Uploaded {{post.time}}
+          class="postTitle"><a href="{{post.link}}">{{post.title}}</a></span><br> <span
+          class="postInfo">Uploaded {{post.time}}
           hours ago by: {{post.username}} </span> <br> <span class="postSource"> {{post.commentNum}} comments <a
           href="{{post.link}}">source</a></span></p>
         <br>
@@ -145,7 +150,8 @@
       <div class="tab-pane active" id="tab1" *ngFor="let post of masterPostList">
         <p><span class="up"><img src="./assets/upArrow.png"></span><span class="postVotes">{{post.upvotes}}</span><span
           class="down"><img src="./assets/downArrow.png"></span><span class="postImage"> <img src="{{post.thumbnail}}"> </span><span
-          class="postTitle">{{post.title}}</span><br> <span class="postInfo">Uploaded {{post.time}}
+          class="postTitle"><a href="{{post.link}}">{{post.title}}</a></span><br> <span
+          class="postInfo">Uploaded {{post.time}}
           hours ago by: {{post.username}} </span> <br> <span class="postSource"> {{post.commentNum}} comments <a
           href="{{post.link}}">source</a></span></p>
         <br>
